Fixes footer gap issue

--- a/style.css
+++ b/style.css
@@ -52,15 +52,8 @@ body {
   }
 }
 
-::-webkit-scrollbar {
-  width: 0.4rem;
-}
-body::-webkit-scrollbar-track {
-  background-color: rgb(0, 0, 79);
-}
-::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background-color: #0600b6;
+body::-webkit-scrollbar {
+  display: none;
 }
 
 body,
@@ -716,7 +709,6 @@ Footer:
   justify-content: center;
   width: 100%;
   height: 4rem;
-  margin-bottom: 0.8rem;
   padding: 1rem 0;
   /* 'Milk-glass' */
   background: rgba(0, 7, 27, 0.6);
